--- a/src/main/META-INF/mods.toml
+++ b/src/main/META-INF/mods.toml
@@ -1,11 +1,11 @@
 modLoader="lowcodefml"
-loaderVersion="[46,]"
+loaderVersion="[42,]"
 license="None"
 
 [[mods]]
 modId="create_mortar"
-version="0.1.6"
-displayname="Create: Compatible"
+version="0.1.7"
+displayname="Create: Mortar"
 description="Recipe changes and create add on compat"
 dependencies="AFTER:*"
 logoFile = "Mortar.png"
@@ -13,7 +13,7 @@ logoFile = "Mortar.png"
 [[dependencies.create_mortar]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.20.1]"
+versionRange="[1.19.2]"
 ordering="NONE"
 side="BOTH"
 
@@ -34,7 +34,7 @@ side="BOTH"
 [[dependencies.create_mortar]]
 modId="railways"
 mandatory= false
-versionRange="[1.6.1+forge-mc1.20.1,)"
+versionRange="[1.6.1+forge-mc1.19.2,)"
 ordering="AFTER"
 side="BOTH"
 
