--- a/src/main/META-INF/mods.toml
+++ b/src/main/META-INF/mods.toml
@@ -49,7 +49,7 @@ side="BOTH"
 [[dependencies.create_mortar]]
 modId="create_dd"
 mandatory= false
-versionRange="[0.2c,)"
+versionRange="[0.1b,)"
 ordering="AFTER"
 side="BOTH"
 
